# cpp-starter

./: .gitignore  Makefile.am  README.md  configure.ac
libapp/: library.cc  library.hh
